--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Aymt7mi's online portfolio showcasing skills and projects.">
-  <title>Aymt7mi</title>
+  <title>Aymt7mi.</title>
   <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
