--- a/index.html
+++ b/index.html
@@ -63,11 +63,21 @@
   </div>
 
   <div class="cv-showcase">
-    <p></p>
+    <div class="cv-slider">
+      <img src="media/cvs/CV1.jpg" alt="CV Page 1" class="slide">
+      <img src="media/cvs/CV12.jpg" alt="CV Page 12" class="slide">
+    </div>
+    <div class="cv-controls">
+      <button id="prevSlide">Previous</button>
+      <button id="nextSlide">Next</button>
+    </div>
+    <button id="downloadPdf">Download PDF</button>
     <div class="cv-content">
       <!-- CV content will be displayed here -->
     </div>
   </div>
+  
+  
 
   <script src="script.js"></script> 
 </body>
