Adding Profile.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="dark-mode">
   
   <div class="container">
-    <div class="box" onclick="window.location.href='profile.html'">
+    <div class="box" onclick="window.location.href='redirect/profile/profile.html'">
       <div class="item">
         <img src="media/svg/me.svg" alt="me">
         <span class="icon-name">Profile</span>
@@ -22,7 +22,7 @@
         <span class="icon-name">Gmail</span>
       </div>
     </div>
-    <div class="box" onclick="window.location.href='contacts.html'">
+    <div class="box" onclick="window.open('tel:+966538024619')">
       <div class="item">
         <img src="media/svg/contacts.svg" alt="contacts">
         <span class="icon-name">Contacts</span>
@@ -45,12 +45,12 @@
         <img src="media/svg/linkedin.svg" alt="linkedin">
         <span class="icon-name">LinkedIn</span>
       </div>
-    </div>
+    </div><!--
     <div class="box" onclick="window.location.href='about.html'">
       <div class="item">
         <img src="media/svg/about.svg" alt="about">
         <span class="icon-name">About</span>
-      </div>
+      </div>-->
     </div>
   </div>
 
