Adding Contact.html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <span class="icon-name">Gmail</span>
       </div>
     </div>
-    <div class="box" onclick="window.open('tel:+966538024619')">
+    <div class="box" onclick="window.location.href='redirect/contact/contact.html'">
       <div class="item">
-        <img src="media/svg/contacts.svg" alt="contacts">
-        <span class="icon-name">Contacts</span>
+          <img src="media/svg/contacts.svg" alt="contacts">
+          <span class="icon-name">Contacts</span>
       </div>
-    </div>
+  </div>
     <div class="box" onclick="window.location.href='media/cvs/CV1.pdf'">
       <div class="item">
         <img src="media/svg/doc.svg" alt="doc">
