--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
                 <a href="mailto:mathami.ahmad@gmail.com">
                     <i class="fas fa-envelope"></i>
                 </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank">
+                <a href="https://linkedin.com/in/aymt7mi" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/yourusername" target="_blank">
+                <a href="https://github.com/oAmadu" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
