--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <meta name="theme-color" content="#0f172a">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="70">
+  <div class="scroll-progress"></div>
 
     <!-- Navigation Menu 
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -65,7 +68,7 @@
             <p>Software Development | IoT | Artificial Intelligence | Networking</p>
             <!-- Social Media Icons -->
                 <div class="social-icons">
-                    <a href="mailto:mathami.ahmad@gmail.com">
+                    <a href="mailto:aymt7mi@gmail.com">
                     <i class="fas fa-envelope"></i>
                     </a>
                     <a href="https://linkedin.com/in/aymt7mi" target="_blank">
@@ -242,13 +245,13 @@
             <p><strong>Phone:</strong> +966 53 802 4619</p>
             <!-- Social Media Icons -->
             <div class="social-icons">
-                <a href="mailto:mathami.ahmad@gmail.com">
+                <a href="mailto:aymt7mi@gmail.com">
                     <i class="fas fa-envelope"></i>
                 </a>
-                <a href="https://linkedin.com/in/aymt7mi" target="_blank">
+                <a href="https://linkedin.com/in/yourprofile" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/oAmadu" target="_blank">
+                <a href="https://github.com/yourusername" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
@@ -295,6 +298,24 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <!-- Lightbox2 JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+<button id="scroll-top" aria-label="Scroll to top">
+  <i class="fas fa-arrow-up"></i>
+  <script>const scrollBtn = document.getElementById('scroll-top');
 
+    window.addEventListener('scroll', () => {
+        if (window.pageYOffset > 300) {
+            scrollBtn.classList.add('visible');
+        } else {
+            scrollBtn.classList.remove('visible');
+        }
+    });
+    
+    scrollBtn.addEventListener('click', () => {
+        window.scrollTo({
+            top: 0,
+            behavior: 'smooth'
+        });
+    });</script>
+</button>
 </body>
 </html>
