--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="container text-center">
             <h2>Contact Me</h2>
             <p>Feel free to reach out through any of the platforms below.</p>
-            <p><strong>Email:</strong> <a href="mailto:mathami.ahmad@gmail.com">mathami.ahmad@gmail.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:aymt7mi@gmail.com">aymt7mi@gmail.com</a></p>
             <p><strong>Phone:</strong> +966 53 802 4619</p>
             <!-- Social Media Icons -->
             <div class="social-icons">
